@@ -6,6 +6,8 @@ git-annex (10.20240532) UNRELEASED; urgency=medium
   * Tab completion of options like --from now includes special remotes.
   * Fix Windows build with Win32 2.13.4+
     Thanks, Oleg Tolmatcev
+  * When --debugfilter or annex.debugfilter is set, avoid propigating
+    debug output from git-annex-shell, since it cannot be filtered.
 
  -- Joey Hess <id@joeyh.name>  Mon, 03 Jun 2024 13:03:21 -0400
 
